--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,12 +4,16 @@
     <string name="hotel">Отели</string>
     <string name="shorts">Короче</string>
     <string name="sings">Подписки</string>
+    <string name="hard_road">Сложный маршрут</string>
+    <string name="every_where">Куда угодно</string>
+    <string name="holidays">Выходные</string>
+    <string name="hot_tickets">Горячие билеты</string>
     <string name="profile">Профиль</string>
-    <string name="where_from">Откуда</string>
+    <string name="where_from">Откуда - Турция</string>
     <string name="your_first_time">Ваш первый раз</string>
     <string name="show_every_place">Показать все места</string>
     <string name="music_from">Музыкально отлететь</string>
-    <string name="where">Куда</string>
+    <string name="where">Куда - Москва</string>
     <string name="find_chip_ticket">Поиск дешевых авиабилетов</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
