--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,4 +17,10 @@
     <string name="find_chip_ticket">Поиск дешевых авиабилетов</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="Istambyl">Стамбул</string>
+    <string name="away">Популярное направление</string>
+    <string name="Sochi">Сочи</string>
+    <string name="Phuket">Пхукет</string>
+
 </resources>
