--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,5 +22,7 @@
     <string name="away">Популярное направление</string>
     <string name="Sochi">Сочи</string>
     <string name="Phuket">Пхукет</string>
+    <string name="_24">24 февраля</string>
+    <string name="description">выпыв</string>
 
 </resources>
